--- a/README.ipynb
+++ b/README.ipynb
@@ -101,7 +101,7 @@
       "source": [
         "## Streamlit App",
         "\n",
-        "Test"
+        "Streamlit app run from code within `.py` script. "
       ],
       "metadata": {
         "id": "WxGcKtqxfyw0"
